--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
     <%= image_tag post.photo.url(:thumb) %><br>
   <% end %>
   <%= link_to(post.title, post_path(post)) %><br>
-  Date: <%= post.created_at %><br>
+  Date: <%= post.created_at.to_date %><br>
   By: <%= post.user.username %><br>
   <%= post.excerpt %><br>
   <br>
