--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
 <nav>
   <ul>
-    <li><%= link_to('High School', page_path(1)) %></li>
+    <li>High School</li>
     <li>College</li>
     <li>Applying</li>
     <li>Alternatives</li>
