Add Slug to Posts and Add Seeds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
 <nav>
   <ul>
-    <li>High School</li>
+    <li><%= link_to('High School', "http://localhost:3000/pages/high-school-to-medical-school") %></li>
     <li>College</li>
     <li>Applying</li>
     <li>Alternatives</li>
