--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,5 +14,7 @@
     <br>
 
   <% end %>
-
+<div class="pagination">
+<%= will_paginate @posts, previous_label: "Newer", next_label: "Older", inner_window: 2, outer_window: 0 %>
+</div>
 
