--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -11,3 +11,38 @@ img{
 article{
   margin: 0 auto;
 }
+
+.pagination {
+  background: white;
+  cursor: default;
+  /* self-clearing method: */ }
+
+.pagination a, .pagination span, .pagination em {
+  padding: 0.2em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 1px; }
+
+.pagination .disabled {
+  color: #999999;
+  border: 1px solid #dddddd; }
+
+.pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background: #2e6ab1;
+  color: white;
+  border: 1px solid #2e6ab1; }
+
+.pagination a {
+  text-decoration: none;
+  color: #105cb6;
+  border: 1px solid #9aafe5; }
+
+.pagination a:hover, .pagination a:focus {
+  font-style: normal;
+  font-weight: bold;
+  background: #2e6ab1;
+  color: white;
+  border: 1px solid #2e6ab1; }
+
