--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
-<h2>Home Page</h2>
+<h2>Welcome to PreMed Roadmap!</h2>
+
+<p>This site was created by a medical student (now resident!) to help premed students by clearing the confusion about medical school admissions.</p>
+
+<p>Use the navigation above to find your path to medical school.</p>
+
+<h2>Recent Blog Posts:</h2>
