--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,48 +31,48 @@
   </ul>
   -->
   <%= link_to(image_tag('premedroadmaplogo3.png', :alt =>'PreMed Roadmap Logo'), root_path) %>
-  <p id="headtext">Find Your Path<br> to Medical School</p>
+  <p id="headtext"><%= link_to('Find Your Path<br> to Medical School'.html_safe, root_path) %></p>
 </header>
 
 <nav id="primary_nav">
   <ul>
-    <li class="firstli"><%= link_to('High School &darr;'.html_safe, 'http://localhost:3000/pages/high-school-to-medical-school') %>
+    <li class="firstli"><%= link_to('Home', root_path) %></li>
+    <li><%= link_to('High School &darr;'.html_safe, 'http://localhost:3000/pages/high-school-to-medical-school') %>
         <ul>
-          <li>Is Medicine for Me?</li>
-          <li>High School Courses for Medical School</li>
-          <li>PreMed Colleges and Degrees</li>
-          <li>Seven Year Medical Programs</li>
+          <li><%= link_to('Is Medicine for Me?', 'http://localhost:3000/pages/is-medicine-for-me') %></li>
+          <li><%= link_to('High School Courses for Medical School', 'http://localhost:3000/pages/high-school-courses-for-medical-school') %></li>
+          <li><%= link_to('PreMed Colleges and Degrees', 'http://localhost:3000/pages/premed-colleges-degrees') %></li>
+          <li><%= link_to('Seven Year Medical Programs', 'http://localhost:3000/pages/seven-year-medical-programs') %></li>
         </ul>
     </li>
     <li><%= link_to('College &darr;'.html_safe, 'http://localhost:3000/pages/pre-med') %>
       <ul>
-        <li>Medical School Requirements</li>
-        <li>PreMed Majors and Courses</li>
-        <li>MCAT Prep Guide</li>
-        <li>What is Medical School Like?</li>
+        <li><%= link_to('Medical School Requirements', 'http://localhost:3000/pages/medical-school-requirements') %></li>
+        <li><%= link_to('PreMed Majors and Courses', 'http://localhost:3000/pages/pre-med-major-and-courses') %></li>
+        <li><%= link_to('MCAT Prep Guide', 'http://localhost:3000/pages/mcat-prep') %></li>
       </ul>
     </li>
     <li><%= link_to('Applying &darr;'.html_safe, 'http://localhost:3000/pages/applying-to-medical-school') %>
       <ul>
-        <li>Medical School Acceptance Statistics</li>
-        <li>How to Write a Personal Statement</li>
-        <li>Recommendation Letters</li>
-        <li>AMCAS Step by Step</li>
-        <li>Secondary Application Essays</li>
-        <li>Interview Guide</li>
-        <li>How to Choose a Medical School</li>
+        <li><%= link_to('Medical School Acceptance Statistics', 'http://localhost:3000/pages/medical-school-statistics') %></li>
+        <li><%= link_to('How to Write a Personal Statement', 'http://localhost:3000/pages/how-to-write-a-medical-school-personal-statement') %></li>
+        <li><%= link_to('Recommendation Letters', 'http://localhost:3000/pages/medical-school-recommendation-letters') %></li>
+        <li><%= link_to('AMCAS Step by Step', 'http://localhost:3000/pages/amcas-medical-school-application') %></li>
+        <li><%= link_to('Secondary Application Essays', 'http://localhost:3000/pages/medical-school-secondary-application-essays') %></li>
+        <li><%= link_to('Interview Guide', 'http://localhost:3000/pages/medical-school-interview') %></li>
+        <li><%= link_to('How to Choose a Medical School', 'http://localhost:3000/pages/how-to-choose-a-medical-school') %></li>
       </ul>
     </li>
     <li><%= link_to('Alternatives &darr;'.html_safe, 'http://localhost:3000/pages/alternative-to-medical-school') %>
       <ul>
-        <li>Should I Apply Again?</li>
-        <li>About Caribbean Medical Schools</li>
-        <li>About Osteopathic Medical Schools</li>
+        <li><%= link_to('Should I Apply Again?', 'http://localhost:3000/pages/reapplying-to-medical-school') %></li>
+        <li><%= link_to('About Caribbean Medical Schools', 'http://localhost:3000/pages/caribbean-medical-schools') %></li>
+        <li><%= link_to('About Osteopathic Medical Schools', 'http://localhost:3000/pages/osteopathic-medical-schools-and-what-is-osteopathy') %></li>
       </ul>
     </li>
     <li><%= link_to('Careers', 'http://localhost:3000/pages/health-careers') %></li>
     <li><%= link_to('Blog', posts_path) %></li>
-    <li><%= link_to('Contact', contact_path) %></li>
+    <li><%= link_to('Contact', contacts_path) %></li>
   </ul>
 </nav>
 
@@ -81,7 +81,18 @@
 </section>
 
 <aside>
-  Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. Pityful a rethoric question ran over her cheek, then
+  <div class="adcontainer">
+      <p>Ads Support Our Site</p>
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- side -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:160px;height:600px"
+           data-ad-client="ca-pub-0527139808773078"
+           data-ad-slot="0715419408"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+  </div>
 </aside>
 <footer>
   &copy; 2015 PreMed Roadmap
