--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,21 +1,10 @@
 <% @title= @page.title %>
 
 <p>
-  <strong>Title:</strong>
-  <%= @page.title %>
+Last Updated: <%= @page.updated_at.strftime("%m/%d/%y") %>
 </p>
 
-<p>
-  Date Posted: <%= @page.created_at.to_date %>
-</p>
-
-<p>
-  Date Last Updated: <%= @page.updated_at.to_date %>
-</p>
-
-
-  <strong>Body:</strong>
-  <%= sanitize @page.body %>
+<p><%= sanitize @page.body %></p>
 
 
 
