--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,14 @@
 <% @title= 'Blog' %>
 
 
-<p>Blog</p>
+<h1>Blog</h1>
 <% @posts.each do |post| %>
 <% if post.photo? %>
   <%= image_tag post.photo.url(:thumb) %><br>
 <% end %>
 
     <%= link_to(post.title, post_path(post)) %><br>
-    Date: <%= post.created_at.to_date %><br>
+    Date: <%= post.created_at.strftime("%m/%d/%y") %><br>
     By: <%= post.user.username %><br>
     <%= post.excerpt %><br>
     <br>
