--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,15 +26,15 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, size: 80 %>
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_area :body %>
+    <%= f.text_area :body, cols: 80, rows: 40 %>
   </div>
   <div class="field">
     <%= f.label :excerpt %><br>
-    <%= f.text_area :excerpt %>
+    <%= f.text_area :excerpt, cols: 80, rows: 10 %>
   </div>
   <div class="actions">
     <%= f.submit %>
