--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,7 +70,8 @@ header {
     background: #689D68;
     margin: 0 auto;
     padding: 0;
-    border-radius: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 header img {
@@ -129,7 +130,8 @@ nav a:active{
         background: #428442;
         width: 90%;
         margin: 0 auto;
-        border-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
     nav ul {
