--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,40 +49,40 @@
     <nav id="primary_nav">
       <ul>
         <li class="firstli"><%= link_to('Home', root_path) %></li>
-        <li><%= link_to('High School &darr;'.html_safe, 'http://localhost:3000/pages/high-school-to-medical-school') %>
+        <li><%= link_to('High School &darr;'.html_safe, '/pages/high-school-to-medical-school') %>
             <ul>
-              <li><%= link_to('Is Medicine for Me?', 'http://localhost:3000/pages/is-medicine-for-me') %></li>
-              <li><%= link_to('High School Courses for Medical School', 'http://localhost:3000/pages/high-school-courses-for-medical-school') %></li>
-              <li><%= link_to('PreMed Colleges and Degrees', 'http://localhost:3000/pages/premed-colleges-degrees') %></li>
-              <li><%= link_to('Seven Year Medical Programs', 'http://localhost:3000/pages/seven-year-medical-programs') %></li>
+              <li><%= link_to('Is Medicine for Me?', '/pages/is-medicine-for-me') %></li>
+              <li><%= link_to('High School Courses for Medical School', '/pages/high-school-courses-for-medical-school') %></li>
+              <li><%= link_to('PreMed Colleges and Degrees', '/pages/premed-colleges-degrees') %></li>
+              <li><%= link_to('Seven Year Medical Programs', '/pages/seven-year-medical-programs') %></li>
             </ul>
         </li>
-        <li><%= link_to('College &darr;'.html_safe, 'http://localhost:3000/pages/pre-med') %>
+        <li><%= link_to('College &darr;'.html_safe, '/pages/pre-med') %>
           <ul>
-            <li><%= link_to('Medical School Requirements', 'http://localhost:3000/pages/medical-school-requirements') %></li>
-            <li><%= link_to('PreMed Majors and Courses', 'http://localhost:3000/pages/pre-med-major-and-courses') %></li>
-            <li><%= link_to('MCAT Prep Guide', 'http://localhost:3000/pages/mcat-prep') %></li>
+            <li><%= link_to('Medical School Requirements', '/pages/medical-school-requirements') %></li>
+            <li><%= link_to('PreMed Majors and Courses', '/pages/pre-med-major-and-courses') %></li>
+            <li><%= link_to('MCAT Prep Guide', '/pages/mcat-prep') %></li>
           </ul>
         </li>
-        <li><%= link_to('Applying &darr;'.html_safe, 'http://localhost:3000/pages/applying-to-medical-school') %>
+        <li><%= link_to('Applying &darr;'.html_safe, '/pages/applying-to-medical-school') %>
           <ul>
-            <li><%= link_to('Medical School Acceptance Statistics', 'http://localhost:3000/pages/medical-school-statistics') %></li>
-            <li><%= link_to('How to Write a Personal Statement', 'http://localhost:3000/pages/how-to-write-a-medical-school-personal-statement') %></li>
-            <li><%= link_to('Recommendation Letters', 'http://localhost:3000/pages/medical-school-recommendation-letters') %></li>
-            <li><%= link_to('AMCAS Step by Step', 'http://localhost:3000/pages/amcas-medical-school-application') %></li>
-            <li><%= link_to('Secondary Application Essays', 'http://localhost:3000/pages/medical-school-secondary-application-essays') %></li>
-            <li><%= link_to('Interview Guide', 'http://localhost:3000/pages/medical-school-interview') %></li>
-            <li><%= link_to('How to Choose a Medical School', 'http://localhost:3000/pages/how-to-choose-a-medical-school') %></li>
+            <li><%= link_to('Medical School Acceptance Statistics', '/pages/medical-school-statistics') %></li>
+            <li><%= link_to('How to Write a Personal Statement', '/pages/how-to-write-a-medical-school-personal-statement') %></li>
+            <li><%= link_to('Recommendation Letters', '/pages/medical-school-recommendation-letters') %></li>
+            <li><%= link_to('AMCAS Step by Step', '/pages/amcas-medical-school-application') %></li>
+            <li><%= link_to('Secondary Application Essays', '/pages/medical-school-secondary-application-essays') %></li>
+            <li><%= link_to('Interview Guide', '/pages/medical-school-interview') %></li>
+            <li><%= link_to('How to Choose a Medical School', '/pages/how-to-choose-a-medical-school') %></li>
           </ul>
         </li>
-        <li><%= link_to('Alternatives &darr;'.html_safe, 'http://localhost:3000/pages/alternative-to-medical-school') %>
+        <li><%= link_to('Alternatives &darr;'.html_safe, '/pages/alternative-to-medical-school') %>
           <ul>
-            <li><%= link_to('Should I Apply Again?', 'http://localhost:3000/pages/reapplying-to-medical-school') %></li>
-            <li><%= link_to('About Caribbean Medical Schools', 'http://localhost:3000/pages/caribbean-medical-schools') %></li>
-            <li><%= link_to('About Osteopathic Medical Schools', 'http://localhost:3000/pages/osteopathic-medical-schools-and-what-is-osteopathy') %></li>
+            <li><%= link_to('Should I Apply Again?', '/pages/reapplying-to-medical-school') %></li>
+            <li><%= link_to('About Caribbean Medical Schools', '/pages/caribbean-medical-schools') %></li>
+            <li><%= link_to('About Osteopathic Medical Schools', '/pages/osteopathic-medical-schools-and-what-is-osteopathy') %></li>
           </ul>
         </li>
-        <li><%= link_to('Careers', 'http://localhost:3000/pages/health-careers') %></li>
+        <li><%= link_to('Careers', '/pages/health-careers') %></li>
         <li><%= link_to('Blog', posts_path) %></li>
         <li><%= link_to('Contact', contacts_path) %></li>
       </ul>
