Fixed route for pre-med-colleges-degrees

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     PreMed Roadmap: Find Your Path to Medical School
     <% end %>
     </title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true, async: true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true, async: true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true, :async => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= favicon_link_tag 'favicon.ico' %>
