Add home bottom ad

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,3 +20,13 @@
 <% end %>
 
 <%= link_to('More Posts', posts_path) %>
+<p>Ads Support Our Site</p>
+<p><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- bottom -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-0527139808773078"
+     data-ad-slot="6394666175"></ins></p>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
