--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :body, cols: 80, rows: 40 %>
   </div>
 
+    <div class="field">
+      <%= f.label :description %><br>
+      <%= f.text_area :description, cols: 40, rows: 5, maxlength: 160 %>
+    </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
