--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,7 +34,7 @@
   </div>
   <div class="field">
     <%= f.label :excerpt %><br>
-    <%= f.text_area :excerpt, cols: 80, rows: 10 %>
+    <%= f.text_area :excerpt, cols: 40, rows: 5, maxlength: 160 %>
   </div>
   <div class="actions">
     <%= f.submit %>
