Responsive Ad Units

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,15 +108,16 @@
         <% unless current_page?(root_path) %>
           <div class="adcontainer">
               <p>Ads Support Our Site</p>
-              <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-              <!-- side -->
-              <ins class="adsbygoogle"
-                   style="display:inline-block;width:160px;height:600px"
-                   data-ad-client="ca-pub-0527139808773078"
-                   data-ad-slot="0715419408"></ins>
-              <script>
-                  (adsbygoogle = window.adsbygoogle || []).push({});
-              </script>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- responsive -->
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-0527139808773078"
+                     data-ad-slot="9036637777"
+                     data-ad-format="auto"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
           </div>
               <% end %>
     </aside>
