--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,7 @@
 <h2>Recent Blog Posts:</h2>
 
 <% @posts.each do |post| %>
+    <hr>
     <% if post.photo? %>
         <%= image_tag post.photo.url(:thumb) %><br>
     <% end %>
@@ -20,13 +21,15 @@
 <% end %>
 
 <%= link_to('More Posts', posts_path) %>
+<hr>
 <p>Ads Support Our Site</p>
 <p><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- bottom -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-0527139808773078"
-     data-ad-slot="6394666175"></ins></p>
-<script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+  <!-- responsive -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-0527139808773078"
+       data-ad-slot="9036637777"
+       data-ad-format="auto"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script></p>
