Add Caption to posts

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -46,3 +46,9 @@ article{
   color: white;
   border: 1px solid #2e6ab1; }
 
+figcaption {
+  font-style: italic;
+  float: left;
+  clear: left;
+  width: 300px;
+}
