--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,13 +14,17 @@
   <% if !@post.photo? %>
       <div class="field">
         <%= f.label :photo %><br>
-        <%= f.file_field :photo %>
+        <%= f.file_field :photo %><br>
+        <%= f.label :caption %><br>
+        <%= f.text_area :caption, cols: 40, rows: 5, maxlength: 160 %>
       </div>
   <% else %>
       <div class="field">
-        <%= image_tag @post.photo.url %>
-        <p>Upload New Photo:</p>
-        <%= f.file_field :photo %>
+        <%= image_tag @post.photo.url %><br>
+        <p>Upload New Photo:</p><br>
+        <%= f.file_field :photo %><br>
+        <%= f.label :caption %><br>
+        <%= f.text_area :caption, cols: 40, rows: 5, maxlength: 160 %>
       </div>
   <% end %>
 
