--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,12 @@
 <% description @post.excerpt %>
 
     <% if @post.photo? %>
-      <%= image_tag @post.photo.url(:medium) %>
+        <figure>
+            <%= image_tag @post.photo.url(:medium) %>
+            <figcaption>
+              <%= @post.caption %>
+            </figcaption>
+        </figure>
     <% end %>
 
     <h1>
