--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,7 +16,7 @@
         <%= f.label :photo %><br>
         <%= f.file_field :photo %><br>
         <%= f.label :caption %><br>
-        <%= f.text_area :caption, cols: 40, rows: 5, maxlength: 160 %>
+        <%= f.text_area :caption, cols: 40, rows: 5 %>
       </div>
   <% else %>
       <div class="field">
@@ -24,7 +24,7 @@
         <p>Upload New Photo:</p><br>
         <%= f.file_field :photo %><br>
         <%= f.label :caption %><br>
-        <%= f.text_area :caption, cols: 40, rows: 5, maxlength: 160 %>
+        <%= f.text_area :caption, cols: 40, rows: 5 %>
       </div>
   <% end %>
 
